--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -9,12 +9,12 @@
     <h1>My Interests</h1>
     <h2>Programming</h2>
     <h3>Networking</h3>
-    <img src="https://shorturl.at/qINW4"/>
+    <img src="https://shorturl.at/qINW4" alt="Nature">
     <p>This is my page which showcasws things i find interesteing</p>
     <p>Now you see <strong>Cybersecurity</strong>is very relevant in todays world</p>
     <p>It doesn't matter what aspect of it but it is crucial.</p>
     <p>You can start with <a href="www.tryhackme.com">Tryhackme</a></p>
     
-    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">I was 404 someone found me and took me 127.0.0.1</p>&mdash; Mustapha Isah (@L4z3r473n7) <a href="https://twitter.com/L4z3r473n7/status/1677142856434176000?ref_src=twsrc%5Etfw">July 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">I was 404 someone found me and took me 127.0.0.1</p>&mdash; Mustapha Isah (@L4z3r473n7) <a href="https://twitter.com/L4z3r473n7/status/1677142856434176000?ref_src=twsrc%5Etfw">July 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js"></script>
   </body>
 </html>
