--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -10,7 +10,7 @@
     <h1>My Interests</h1>
     <h2>Programming</h2>
     <h3>Networking</h3>
-    <img src="https://shorturl.at/qINW4"/>
+    <img src="https://shorturl.at/qINW4" alt="Nature">
     <p>This is my page which showcasws things i find interesteing</p>
     <p>Now you see <strong>Cybersecurity</strong>is very relevant in todays world</p>
     <p>It doesn't matter what aspect of it but it is crucial.</p>
@@ -23,7 +23,7 @@
           for making it possible.<br><br>And a special, big, thank you to the… 
           <a href="https://t.co/SvRLKa7WGS">pic.twitter.com/SvRLKa7WGS</a></p>&mdash; 
           Julien Barbier 🙃❤️🏴‍☠️ 七転び八起き (@julienbarbier42) <a href="https://twitter.com/julienbarbier42/status/1676847267767103488?ref_src=twsrc%5Etfw">July 6, 2023</a>
-      </blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
+      </blockquote> <script async src="https://platform.twitter.com/widgets.js"></script>
     
     
   </body>
