--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="author" content="Mustapha Isah">
     <title>My test page</title>
   </head>
   <body>
+    <p><a href="base_index.html">Home</a></p>
     <h1>My Interests</h1>
     <h2>Programming</h2>
     <h3>Networking</h3>
