--- a/html_basic/base_index.html
+++ b/html_basic/base_index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="author" content="Mustapha Isah">
     <title>My test page</title>
   </head>
   <body>
