--- a/flexbox/0-index.html
+++ b/flexbox/0-index.html
@@ -58,7 +58,7 @@
           </div>
         </div>
       </section>
-      <!– Services section –>
+      <!-- Services section -->
       <section id="services" class="section">
         <div class="container">
           <header class="section-header">
@@ -103,7 +103,7 @@
           </div>
         </div>
       </section>
-      <!– Works section –>
+      <!-- Works section -->
       <section id="works" class="section" data-section-theme="dark">
         <div class="container">
           <header class="section-header">
@@ -224,7 +224,7 @@
           </div>
         </div>
       </section>
-      <!– Testimonials section –>
+      <!-- Testimonials section -->
       <section id="testimonial" class="section">
         <div class="container">
           <header class="section-header">
